code/part1/sibongisipho-dlova-VPC.yml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
  EnvironmentName:
    Description: A string that will be prefixed onto each resource created in the template.
    Type: String
    Default: DE-Extract
  VpcCIDR:
    Description: The IPv4 address space for the VPC hosting the scenario challenge.
    Type: String
    Default: 192.168.0.0/16
  DataCenterPublicSubnetCIDR:
    Description: The IPv4 address space for the publicly accessible portion of the VPC.
    Type: String
    Default: 192.168.10.0/24
Resources:
  DETEAM05VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName
  InternetGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref DETEAM05VPC
  DataCenterPublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref DETEAM05VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref DataCenterPublicSubnetCIDR
      MapPublicIPOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Data Center Subnet
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref DETEAM05VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName} Public Routes
  DefaultPublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  DataCenterPublicSubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref DataCenterPublicSubnet
  WindowsInstanceSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref DETEAM05VPC
      GroupName: "DE-Extract-WindowsInstanceSG"
      Description: "Allows RDP access to an instance in the public subnet of the VPC"
      IpProtocol: tcp
      FromPort: 3389
      ToPort: 3389
      CidrIp: 0.0.0.0/0
      Tag:
        - Key: Name
          Value: !Sub ${EnvironmentName}-WindowsInstanceSG
  FileServerSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref DETEAM05VPC
      GroupName: "DE-Extract-FileServerSG"
      Description: "Allows ssh access to the data in the file server"
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 192.168.10.0/24
      Tag:
        - Key: Name
          Value: !Sub ${EnvironmentName}-FileServerSG
  FileGatewaySG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref DETEAM05VPC
      GroupName: "DE-Extract-FileGatewaySG"
      Description: "Controls access to the file gateway instance"
      IpProtocol: tcp
      FromPort: 1
      ToPort: 65534
      CidrIp: 192.168.0.0/16
      Tag:
        - Key: Name
          Value: !Sub ${EnvironmentName}-FileGatewaySG
Outputs:
  DETEAM05VPC:
    Description: "A reference to the created VPC"
    Value: !Ref DETEAM05VPC
  DataCenterPublicSubnet:
    Description: "A reference to the public subnet in the 1st AZ"
    Value: !Ref  DataCenterPublicSubnet
